--- a/Assets/Scripts/UI/Control/UIControl.asmdef
+++ b/Assets/Scripts/UI/Control/UIControl.asmdef
@@ -1,9 +1,8 @@
 {
-    "name": "DisplayUI",
+    "name": "UIControl",
     "rootNamespace": "",
     "references": [
-        "GUID:06d6a124dffe8a249ac0c7077fb670c1",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:06d6a124dffe8a249ac0c7077fb670c1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
