--- a/Assets/Scripts/UI/Display/UIDisplay.asmdef
+++ b/Assets/Scripts/UI/Display/UIDisplay.asmdef
@@ -1,8 +1,9 @@
 {
-    "name": "ControlUI",
+    "name": "UIDisplay",
     "rootNamespace": "",
     "references": [
-        "GUID:06d6a124dffe8a249ac0c7077fb670c1"
+        "GUID:06d6a124dffe8a249ac0c7077fb670c1",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
