--- a/Assets/Scripts/System/SpellEffects/SpellEffects.asmdef
+++ b/Assets/Scripts/System/SpellEffects/SpellEffects.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "UIControl",
+    "name": "SpellEffects",
     "rootNamespace": "",
     "references": [
-        "GUID:06d6a124dffe8a249ac0c7077fb670c1",
-        "GUID:4aeeb8a841759e349ad41d4d922314a2",
-        "GUID:18cee5f85ba8c5b45bcb954691ad6f64"
+        "GUID:06d6a124dffe8a249ac0c7077fb670c1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
