--- a/Assets/Scripts/UI/Display/UIDisplay.asmdef
+++ b/Assets/Scripts/UI/Display/UIDisplay.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "",
     "references": [
         "GUID:06d6a124dffe8a249ac0c7077fb670c1",
+        "GUID:4aeeb8a841759e349ad41d4d922314a2",
         "GUID:18cee5f85ba8c5b45bcb954691ad6f64",
         "GUID:2caddc2500385464aa2fbf4c8785b1df",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
