Players can only be swapped max once every second

--- a/Assets/Scripts/UI/Control/UIControl.asmdef
+++ b/Assets/Scripts/UI/Control/UIControl.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:06d6a124dffe8a249ac0c7077fb670c1",
         "GUID:4aeeb8a841759e349ad41d4d922314a2",
-        "GUID:18cee5f85ba8c5b45bcb954691ad6f64"
+        "GUID:18cee5f85ba8c5b45bcb954691ad6f64",
+        "GUID:2caddc2500385464aa2fbf4c8785b1df"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
